# real-estate-ai-agent

./: .gitignore  DB.md  LICENSE  PLAN.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  audit_log.py  config.py  deps.py  main.py  mfa.py  rate_limit.py  rate_limit_factory.py  redis_rate_limiter.py  secret_rotation.py  security_validation.py
backend/app/adapters/: __init__.py
backend/app/domain/: __init__.py  billing.py  lead.py  listing.py  message.py  property.py  team.py  user.py
backend/app/routers/: ai.py  auth.py  billing.py  csp_report.py  dashboard.py  health.py  leads.py  line_webhook.py  listings.py  messages.py  properties.py  storage.py  teams.py
backend/app/services/: __init__.py  auth.py  billing_service.py  lead_pipeline.py  listing_generator.py  plan_limits.py  (+1 more)
backend/migrations/: 001_init.sql  002_rls.sql  002_teams.sql  003_billing.sql  004_security_events.sql  005_rls_gaps.sql  006_team_rate_limits.sql  007_mfa.sql  __init__.py
backend/tests/: conftest.py  test_ai_generator.py  test_audit_log.py  test_auth.py  test_billing.py  test_csp_report.py  test_dashboard.py  test_health.py  test_invitations.py  test_leads.py  test_line_helpers.py  test_line_webhook.py  test_listings.py  test_live_smoke.py  test_mfa.py  test_plan_limits.py  test_properties.py  test_rate_limit.py  test_real_swap.py  test_redis_rate_limit.py  test_rls_smoke.py  test_rls_write_paths.py  test_secret_rotation.py  test_security_validation.py  test_storage.py  test_team_members.py  test_team_rate_limits.py  test_teams.py
(+116 files in other folders)
